--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,23 @@
-alembic==1.12.0
-attrs==23.1.0
-blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-clearml==1.13.1
-click==8.1.7
-cloudpickle==2.2.1
-cmake==3.27.5
-contourpy==1.1.1
-cycler==0.12.0
-databricks-cli==0.17.8
-docker==6.1.3
-entrypoints==0.4
-filelock==3.12.4
-Flask==2.3.3
-fonttools==4.42.1
-furl==2.1.3
-gitdb==4.0.10
-GitPython==3.1.37
-greenlet==2.0.2
-gunicorn==21.2.0
-idna==3.4
-importlib-metadata==6.8.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-kiwisolver==1.4.5
-lit==17.0.1
-Mako==1.2.4
-Markdown==3.4.4
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-mlflow==2.7.1
-mpmath==1.3.0
-networkx==3.1
-numpy==1.26.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.2
-opencv-python==4.8.1.78
-orderedmultidict==1.0.1
-packaging==23.1
-pandas==2.1.1
-pathlib2==2.3.7.post1
-Pillow==10.0.1
-protobuf==4.24.3
-psutil==5.9.5
-py-cpuinfo==9.0.0
-pyarrow==13.0.0
-PyJWT==2.4.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-querystring-parser==1.2.4
-referencing==0.30.2
+# Core ML/DL
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+ultralytics==8.0.203  # YOLOv8
+
+# Image Processing
+opencv-python-headless==4.8.0.76
+Pillow==10.0.0
+numpy==1.24.4
+
+# Web/Streamlit
+streamlit==1.28.0
 requests==2.31.0
-rpds-py==0.10.3
-scikit-learn==1.3.1
-scipy==1.11.3
-seaborn==0.12.2
-six==1.16.0
-smmap==5.0.1
-SQLAlchemy==2.0.21
-sqlparse==0.4.4
-sympy==1.12
-tabulate==0.9.0
-threadpoolctl==3.2.0
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.66.1
-triton==2.0.0
-typing_extensions==4.8.0
-tzdata==2023.3
-ultralytics
-urllib3==1.26.16
-websocket-client==1.6.3
-Werkzeug==2.3.7
-zipp==3.17.0
+
+# Utilities
+configparser==5.3.0
+urllib3==2.0.5
+tqdm==4.66.1  # Progress bars (used by YOLO)
+
+# Runtime optimizations
+psutil==5.9.5  # System monitoring
+protobuf==3.20.3  # Protocol buffers (required by YOLO)
