--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
-# Core ML/DL
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
-ultralytics==8.0.203  # YOLOv8
+# Core ML/DL (updated to latest stable CPU versions)
+torch==2.2.1+cpu
+torchvision==0.17.1+cpu
+--index-url https://download.pytorch.org/whl/cpu
+ultralytics==8.1.24  # Latest YOLOv8
 
-# Image Processing
-opencv-python-headless==4.8.0.76
-Pillow==10.0.0
-numpy==1.24.4
+# Image Processing (compatible with PyTorch 2.2.1)
+opencv-python-headless==4.9.0.80
+Pillow==10.2.0
+numpy==1.26.4
 
 # Web/Streamlit
-streamlit==1.28.0
+streamlit==1.32.2
 requests==2.31.0
 
 # Utilities
-configparser==5.3.0
-urllib3==2.0.5
-tqdm==4.66.1
-
-# Explicit pip version specification
-pip==24.0
+configparser==6.0.1
+urllib3==2.2.1
+tqdm==4.66.2
