--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# Core ML/DL (updated to latest stable CPU versions)
-torch==2.2.1+cpu
-torchvision==0.17.1+cpu
---index-url https://download.pytorch.org/whl/cpu
+# Core ML/DL (using latest stable versions compatible with Streamlit)
+torch==2.2.1
+torchvision==0.17.1
 ultralytics==8.1.24  # Latest YOLOv8
 
-# Image Processing (compatible with PyTorch 2.2.1)
+# Image Processing
 opencv-python-headless==4.9.0.80
 Pillow==10.2.0
 numpy==1.26.4
@@ -17,3 +16,6 @@ requests==2.31.0
 configparser==6.0.1
 urllib3==2.2.1
 tqdm==4.66.2
+
+# Python version constraint (important!)
+python_version<3.13  # Streamlit doesn't fully support Python 3.13 yet
