--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core ML/DL (using latest stable versions compatible with Streamlit)
-torch==2.2.1
-torchvision==0.17.1
+torch
+torchvision
 ultralytics==8.1.24  # Latest YOLOv8
 
 # Image Processing
